unpackaged/main/default/objects/bombora_data__Bombora_Sync_Status__c/bombora_data__Bombora_Sync_Status__c.object-meta.xml
<CustomObject>
    <description>Stores Bombora Sync Information</description>
    <label>Bombora Sync Status</label>
    <nameField>
        <label>Bombora Sync Status Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Bombora Sync Statuses</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>