unpackaged/main/default/objects/bombora_data__Bombora_Sync_Status__c/fields/bombora_data__Domain_Match_Rate__c.field-meta.xml
<CustomField>
    <fullName>bombora_data__Domain_Match_Rate__c</fullName>
    <description>Percentage of all domains in a customer&#39;s data set that match Bombora&#39;s data set, regardless of customer clusters or current intent scores.</description>
    <label>Domain Match Rate</label>
    <precision>5</precision>
    <scale>3</scale>
    <type>Percent</type>
</CustomField>