unpackaged/main/default/objects/bombora_data__Bombora_Sync_Status__c/fields/bombora_data__Feature_Stats_Records_Added__c.field-meta.xml
<CustomField>
    <fullName>bombora_data__Feature_Stats_Records_Added__c</fullName>
    <description>Based on the feature, this shows the number of records added. For Surge Data this represents the new Bombora Company Surge records created. For Net New this represents the Account records created.</description>
    <label>Feature Stats - Records Added</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>