unpackaged/main/default/objects/bombora_data__Bombora_Sync_Status__c/fields/bombora_data__Feature_Stats_Records_Removed__c.field-meta.xml
<CustomField>
    <fullName>bombora_data__Feature_Stats_Records_Removed__c</fullName>
    <description>Based on the feature, this shows the number of records removed. For Surge Data this represents the Bombora Company Surge records that were no longer showing relevant Surge Activity as of this sync.</description>
    <label>Feature Stats - Records Removed</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>