unpackaged/main/default/objects/bombora_data__Bombora_Sync_Status__c/fields/bombora_data__Feature_Stats_Records_Updated__c.field-meta.xml
<CustomField>
    <fullName>bombora_data__Feature_Stats_Records_Updated__c</fullName>
    <description>Based on the feature, this shows the number of records updated. For Surge Data this represents the Bombora Company Surge records that have changed since last sync. For Aggregations this represents the Account/Lead records that had thier custom field values updated.</description>
    <label>Feature Stats - Records Updated</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>