unpackaged/main/default/objects/bombora_data__Bombora_Sync_Status__c/fields/bombora_data__Status__c.field-meta.xml
<CustomField>
    <fullName>bombora_data__Status__c</fullName>
    <description>This is a short description of any issues that occured during this features execution.</description>
    <label>Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>