unpackaged/main/default/objects/bombora_data__Bombora_Sync_Status__c/fields/bombora_data__Status_Detail__c.field-meta.xml
<CustomField>
    <fullName>bombora_data__Status_Detail__c</fullName>
    <description>This is a longer descripttion of any issues that occured during the features execution.</description>
    <label>Status Details</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>