unpackaged/main/default/objects/bombora_data__Bombora_Sync_Status__c/fields/bombora_data__Surge_Activity__c.field-meta.xml
<CustomField>
    <fullName>bombora_data__Surge_Activity__c</fullName>
    <description>Percentage of valid domains in a customer&#39;s data set that are showing intent as of this sync.</description>
    <label>Surge Activity</label>
    <precision>5</precision>
    <scale>3</scale>
    <type>Percent</type>
</CustomField>