unpackaged/main/default/objects/bombora_data__Bombora_Sync_Status__c/fields/bombora_data__Surge_Data_Date__c.field-meta.xml
<CustomField>
    <fullName>bombora_data__Surge_Data_Date__c</fullName>
    <description>The date that this Bombora Company Surge data was aggregated. This date can be used to check if the data present in your org is Bombora&#39;s most recent.</description>
    <label>Surge Data Date</label>
    <type>Date</type>
</CustomField>