unpackaged/main/default/objects/bombora_data__Bombora_Sync_Status__c/fields/bombora_data__Sync_Feature__c.field-meta.xml
<CustomField>
    <fullName>bombora_data__Sync_Feature__c</fullName>
    <description>Each Bombora data sync is broken into its primary features to help triage individual issues as they may arise. As of V7 the following features are tracked: Surge Data, which is the import/update/deletion of records into Bombora Company Surge object. Net New, which is the Account Creation feature enabled through the Bombora Admin App. Aggregation, which is the update of Bombora custom fields available on Account and Lead objects. Not all features will have values for each field.</description>
    <label>Sync Feature</label>
    <length>80</length>
    <type>Text</type>
</CustomField>