unpackaged/main/default/objects/bombora_data__Bombora_Sync_Status__c/fields/bombora_data__Sync_Origin__c.field-meta.xml
<CustomField>
    <fullName>bombora_data__Sync_Origin__c</fullName>
    <description>How the sync operation was triggered.</description>
    <label>Sync Origin</label>
    <length>60</length>
    <type>Text</type>
</CustomField>