unpackaged/main/default/objects/bombora_data__Bombora_Sync_Status__c/listViews/bombora_data__All.listView-meta.xml
<ListView>
    <fullName>bombora_data__All</fullName>
    <columns>NAME</columns>
    <columns>bombora_data__Status__c</columns>
    <columns>bombora_data__Feature_Stats_Records_Added__c</columns>
    <columns>bombora_data__Feature_Stats_Records_Removed__c</columns>
    <columns>bombora_data__Feature_Stats_Records_Updated__c</columns>
    <columns>bombora_data__Status_Detail__c</columns>
    <columns>bombora_data__Surge_Activity__c</columns>
    <columns>bombora_data__Surge_Data_Date__c</columns>
    <columns>bombora_data__Sync_Date__c</columns>
    <columns>bombora_data__Sync_Feature__c</columns>
    <columns>bombora_data__Sync_Origin__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>